# Gomoku

./: .gitignore  .gitmodules  CMakeLists.txt  log4cplus.properties.in  log4crc-debug  log4crc-release  log4crc.in
cmake/: FindLog4C.cmake  Findlog4c.cmake
lib/expat-2.2.6-aarch64-linux/lib/: libexpat.la
lib/expat-2.2.6-aarch64-linux/lib/pkgconfig/: expat.pc
lib/expat-2.2.6-i386-linux/lib/: libexpat.la
lib/expat-2.2.6-i386-linux/lib/pkgconfig/: expat.pc
lib/expat-2.2.6-x86_64-linux/lib/: libexpat.la
lib/expat-2.2.6-x86_64-linux/lib/pkgconfig/: expat.pc
lib/log4c-1.2.4-aarch64-linux/lib/: liblog4c.la  liblog4c.so.3.3.1
lib/log4c-1.2.4-aarch64-linux/lib/pkgconfig/: log4c.pc
lib/log4c-1.2.4-i386-linux/lib/: liblog4c.so.3.3.1
lib/log4c-1.2.4-i386-linux/lib/pkgconfig/: log4c.pc
lib/log4c-1.2.4-i686-linux-gnu/lib/: liblog4c.la
lib/log4c-1.2.4-i686-w64-mingw32/lib/: liblog4c.def  liblog4c.la
lib/log4c-1.2.4-i686-w64-mingw32/lib/pkgconfig/: log4c.pc
lib/log4c-1.2.4-x86_64-linux/lib/: liblog4c.la
lib/log4c-1.2.4-x86_64-linux/lib/pkgconfig/: log4c.pc
lib/log4c-1.2.4-x86_64-w64-mingw32/lib/: liblog4c.la
lib/log4c-1.2.4-x86_64-w64-mingw32/lib/pkgconfig/: log4c.pc
src/: main.c  signals.c  signals.h
src/ai/: ai.c  ai.h  evaluate.c  evaluate.h  search.c  search.h
src/interface/: board.c  board.h  boardHelper.c  boardHelper.h  detector.c  detector.h  interface.c  interface.h  screen.c  screen.h
src/utils/: logger.c  logger.cpp  logger.h  signals.c  signals.h  thread.h  values.c  values.h
test/: test.cpp
